# blackwell-kernels

./: .gitignore  AUTOKERNEL.md  CMakeLists.txt  MLA_attention_spec.md  README.md  STATUS.md  build.sh  dashboard.py  eval.sh  new-project.sh  program.md  program_attention.md  program_gemm.md  pyproject.toml  setup.py  watchdog.sh
common/: pyproject.toml
common/claude/: 04_HARD_WON_LESSONS.md  05_WORKER_COMMUNICATION.md  07_OPTIMIZATION_LOOP.md  08_BLAS_COMPLIANCE_CHECKLIST.md
common/docs/: all_cuda13_sm120_new_features.md  all_mxfp8_implementation_guide_sm120.md  all_sm120_rtx5080_microbenchmark_paper.md  autokernel_quick_reference.md  blackwell_compatibility_guide.md  cuda_programming_guide.md  factory_objective_profiles.md  howto_add_kernel.md  math_throttle_optimization.md  project_workspace_guide.md  reference_bank_conflict_swizzle_patterns.md  reference_mma_ptx_programming.md  reference_ptx_gemm_inner_loops.md  sm120_optimization_playbook.md  theoretical_limits.md  training_kernel_strategy.md
common/memory/: factory_brain.py  factory_brain.py.bak2  generate_summaries.py  memory_cli.py  memory_config.py  memory_embeddings.py  memory_experiments.py  memory_helpers.py  memory_ingest.py  memory_issues.py  memory_jobs.py  memory_maintain.py  memory_messages.py  memory_search.py  memory_server.py  memory_stats.py  memory_workers.py  msearch  research.db-shm  research.db-wal  research_memory.py  search  start-server.sh
common/scripts/: blas_compliance.py  build.sh  build_job_packet.py  factory-start.sh  foreman-patrol.sh  gate_process.py  generate_playbook.py  (+23 more)
(+393 files in other folders)
